<resources>
    <string name="app_name">Fabkut Business</string>
    <string name="logo_catch">Groom Your Self ....!</string>
    <string name="forgot_password_content">Enter your registered mobile or e-mail id for reset password</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="net_price">Net Price(Rupees)</string>
    <string name="paid_rp">paid(Rupees)</string>
    <string name="unpaid_rp">Unpaid(Rupees)</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_main_titles">
        <item>Dashboard</item>
    </string-array>


    <string-array name="mode_payment_array">
        <item>Cash</item>
        <item>Debit Card</item>
        <item>Credit Card</item>
        <item>Paytm</item>
    </string-array>

    <string-array name="mode_offer_array">
        <item>%</item>
        <item>Inr Off per billing</item>
    </string-array>

    <string-array name="delivery_mode">
        <item>Courrier</item>
        <item>Transport</item>
    </string-array>

    <string-array name="po_type">
        <item>Direct</item>
        <item>Agent</item>
    </string-array>

    <string-array name="mode_of_payment_array">
        <item>Cash</item>
        <item>COD</item>
        <item>PDC</item>
        <item>Online</item>
    </string-array>

    <string-array name="item_for">
        <item>Inventory</item>
        <item>Consumption</item>
        <item>Sale</item>
    </string-array>

    <string-array name="unit_array">
        <item>Select Unit</item>
        <item>Gram</item>
        <item>KG</item>
        <item>ML</item>
        <item>Pcs</item>
        <item>Ltr</item>
        <item>Dozen</item>
    </string-array>

    <string name="login">Login</string>
    <string name="open_time">Opening Time</string>
    <string name="closed_time">Closing Time</string>
    <string name="rate_Card">Rate Card</string>
    <string name="booking">Booking</string>
    <string name="addCustomer">Add Customer</string>
    <string name="ledgerBalance">Ledger Balance</string>
    <string name="addCash">Add Cash</string>
    <string name="registerAmount">Register Amount</string>
    <string name="voucher">Voucher</string>
    <string name="advancePayment">Advance Payment</string>
    <string name="dayClosing">Day Closing</string>
    <string name="purchaseOrder">Purchase Order</string>
    <string name="report">Report</string>
    <string name="accounting">Accounting</string>
    <string name="date">Date</string>
    <string name="ledger">ledger</string>
    <string name="po">P.O</string>
    <string name="advance">Advance</string>
    <string name="final_">Final</string>
    <string name="draw">Draw</string>
    <string name="close">Close</string>
    <string name="accountReport">Account Report</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="Gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">E-mail</string>
    <string name="mob">Mobile</string>
    <string name="allergies">Allergies</string>
    <string name="save">Save</string>
    <string name="selectStylist">Select Stylist</string>
    <string name="selectServices">Select Services</string>
    <string name="submit">SUBMIT</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="customerDetails">Customer Details</string>
    <string name="mob1">Mobile :</string>
    <string name="services">SERVICES</string>
    <string name="addServices">Add Services</string>
    <string name="pAYMENTSUMMARY">PAYMENT SUMMARY</string>
    <string name="subtotal">Subtotal</string>
    <string name="payToProceed">PROCEED TO PAY</string>
    <string name="search">Search</string>
    <string name="totalVisit">Total Visit</string>
    <string name="totalRevenue">Total Revenue</string>
    <string name="notes">Notes</string>
    <string name="selectDate">Select Date</string>
    <string name="bookNow">Book Now</string>
    <string name="searchCustomer">Search Customer</string>
    <string name="totalSale">Total Sale</string>
    <string name="totalService">Total Service</string>
    <string name="queueNo">Queue No</string>
    <string name="Stylist">Stylist</string>
    <string name="promotion">Promotion</string>
    <string name="customer">Customer</string>
    <string name="progress">Progress</string>
    <string name="leaveReport">Leave Report</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="tDay">T. days</string>
    <string name="price">Price</string>
    <string name="netPrice">Net Price</string>
    <string name="amount">Amount</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="printInvoice">Print Invoice</string>
    <string name="remark">Remark</string>
    <string name="modeofPayment">Mode of Payment</string>
    <string name="iswavedoff">Is waved off</string>
    <string name="unpaid">Unpaid (Rupee)</string>
    <string name="paid">Paid (Rupee)</string>
    <string name="netPrice1">Net Price (Rupee)</string>
    <string name="cancelReasion">Enter reason for cancellation</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="due">Due</string>
    <string name="enterNumber">Enter Name/Number</string>
    <string name="attendance">Attendance</string>
    <string name="leave">Leave</string>
    <string name="stylistLeave">Stylist Leave</string>
    <string name="halfDay">Half Day</string>
    <string name="fullDay">Full Day</string>
    <string name="longdays">Long days</string>
    <string name="transgender">Transgender</string>
    <string name="phone">Phone No.</string>
    <string name="anniversaryDate">Anniversary Date</string>
    <string name="unmarried">Unmarried</string>
    <string name="married">Married</string>
    <string name="maritialStatus">Maritial Status</string>
    <string name="dob">Date of Birth</string>
    <string name="po1">Purchase Order ( PO )</string>
    <string name="select_po">Select PO</string>
    <string name="poAmount">PO Amount</string>
    <string name="balanceAmount">Balance Amount</string>
    <string name="paidAmount">Paid Amount</string>
    <string name="homeAddress">Home Address</string>
    <string name="deliverAddress">Deliver Address</string>
    <string name="modeOfCommunication">Mode Of Communication</string>
    <string name="facebook">Facebook ID</string>
    <string name="twitter">Twitter ID</string>
    <string name="whatsapp">Whatsapp ID</string>
    <string name="preferredEmployeeName">Preferred Employee Name</string>
    <string name="todayStatement">Today Statement</string>
    <string name="todayRevenue">Today\'s Revenue</string>
    <string name="PaymentAgainstPO">Payment Against PO</string>
    <string name="totalVouchersValue">Total Vouchers Value</string>
    <string name="eod">Amount Withdrawn EOD</string>
    <string name="voucherNo">Voucher No.</string>
    <string name="staff">STAFF</string>
    <string name="thirdParty">Third Party</string>
    <string name="mySalon">My Salon</string>
    <string name="inventory">Inventory</string>
    <string name="unpaidCustomer">Unpaid Customer</string>
    <string name="syncToServer">Sync To Server</string>
    <string name="changeLanguage">Change Language</string>
    <string name="logout">Logout</string>
    <string name="choose">Choose Language</string>
    <string name="offerTitle">Offer Title</string>
    <string name="offerDetail">Offer Detail</string>
    <string name="offerType">Offer Type</string>
    <string name="discountPercentage">Discount Percentage</string>
    <string name="coupon">Coupon</string>
    <string name="billing">Billing</string>
    <string name="contactUs">Contact Us</string>
    <string name="employee">Employee</string>
    <string name="bookingOrAppointment">Booking / Appointment</string>
    <string name="All">All</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="review">Review</string>
    <string name="havaPromoCode">Hava a promocode?</string>
    <string name="promocode">Enter Promocode</string>

</resources>
