<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


       <!-- <item
            android:id="@+id/nav_marketing"
            android:icon="@drawable/inventory"
            android:title="Marketing" />
-->


        <item
            android:id="@+id/nav_my_salon"
            android:icon="@drawable/ic_home"
            android:title="@string/mySalon" />
        <item
            android:id="@+id/nav_stylist"
            android:icon="@mipmap/ic_employee"
            android:title="@string/employee" />

       <!-- <item
            android:id="@+id/nav_review"
            android:icon="@mipmap/ic_booking"
            android:title="@string/review" />-->

        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/customer"
            android:title="@string/customer" />

        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/inventory"
            android:title="@string/inventory" />


        <item
            android:id="@+id/nav_report"
            android:icon="@mipmap/ic_report1"
            android:title="@string/report" />


        <item
            android:id="@+id/nav_contact_us"
            android:icon="@android:drawable/sym_call_outgoing"
            android:title="@string/contactUs" />

        <!--<item
            android:id="@+id/nav_previous_balance"
            android:icon="@drawable/customer"
            android:title="@string/unpaidCustomer" />
-->
        <item android:id="@+id/menu_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/syncToServer" />

        <item
            android:id="@+id/nav_lang"
            android:icon="@mipmap/ic_change_langauage"
            android:title="@string/changeLanguage" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_logout"
            android:title="@string/logout" />


    </group>


</menu>
