<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/_4sdp"
            android:weightSum="9"
            android:background="@color/colorGrey25"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"/>
            <View
                android:layout_width="1dp"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@color/colorGrey"
                android:layout_height="match_parent"/>

            <TextView
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ledger"/>
            <View
                android:layout_width="1dp"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@color/colorGrey"
                android:layout_height="match_parent"/>

            <TextView
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/booking"/>
            <View
                android:layout_width="1dp"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@color/colorGrey"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po"/>
            <View
                android:layout_width="1dp"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@color/colorGrey"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advance"/>

            <View
                android:layout_width="1dp"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@color/colorGrey"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voucher"/>

            <View
                android:layout_width="1dp"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@color/colorGrey"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_"/>

            <View
                android:layout_width="1dp"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@color/colorGrey"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/draw"/>

            <View
                android:layout_width="1dp"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@color/colorGrey"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"/>



        </LinearLayout>
    </android.support.v7.widget.CardView>


    <ListView
        android:layout_width="match_parent"
        android:id="@+id/listView"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>