<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/netPrice1" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/layout_bg8"
                android:clickable="false"
                android:enabled="false"
                android:padding="@dimen/_6sdp"
                android:maxLength="6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/paid" />

            <EditText
                android:id="@+id/et_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/layout_bg8"
                android:inputType="number"
                android:padding="@dimen/_6sdp"
                android:maxLength="6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/unpaid" />

            <EditText
                android:id="@+id/et_unpaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/layout_bg8"
                android:clickable="false"
                android:enabled="false"
                android:padding="@dimen/_6sdp"
                android:maxLength="6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />


        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_waved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:buttonTint="@color/colorGrey"
            android:text="@string/iswavedoff"
            android:textColor="@color/colorDarkGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/modeofPayment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/layout_bg8"
                android:padding="@dimen/_6sdp">

                <Spinner
                    android:id="@+id/spinner_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/mode_payment_array" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/remark" />

            <EditText
                android:id="@+id/et_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/layout_bg8"
                android:gravity="top"
                android:lines="3"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />


        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:buttonTint="@color/colorGrey"
            android:text="@string/printInvoice"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/_8sdp" />


        <TextView
            android:gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:padding="@dimen/_7sdp"
            android:id="@+id/haveCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4sdp"
            android:text="@string/havaPromoCode" />
        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@drawable/layout_bg"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</ScrollView>