<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_4sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout android:padding="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlue4"
            android:text="@string/voucher"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:id="@+id/rl_vocherNo"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_8sdp"
                android:padding="@dimen/_4sdp"
                android:id="@+id/tv_voucherTitle"
                android:text="@string/voucherNo"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_voucher_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_voucherTitle"
                android:padding="@dimen/_8sdp"
                android:text=""
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg"
            android:layout_below="@id/rl_vocherNo"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/staff"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:background="@drawable/layout_bg16"
                android:id="@+id/rb_staff"
                android:layout_marginRight="@dimen/_10sdp"/>
            <TextView
                android:background="@drawable/layout_bg16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_thirdParty"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="@string/thirdParty"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectStylist" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/layout_bg8"
                android:padding="@dimen/_6sdp">

                <Spinner
                    android:id="@+id/spinner_employeeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg10"
                android:hint="@string/amount"
                android:inputType="number"
                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/et_pamentAgainst_voucherAmount"
                android:padding="@dimen/_6sdp"
                android:maxLength="6"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableLeft="@mipmap/rupee_icon"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_remark"
                android:background="@drawable/layout_bg10"
                android:hint="@string/remark"
                android:padding="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_response"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                android:gravity="center_vertical"
                android:text=""
                android:visibility="gone"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_Voucher_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg13"
                android:padding="@dimen/_6sdp"
                android:gravity="center"
                android:text="@string/submit"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>



    </LinearLayout>



</RelativeLayout>

</android.support.v7.widget.CardView>