<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_4sdp"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue4"
            android:text="@string/advancePayment"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/selectStylist" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_6sdp"
                android:background="@drawable/layout_bg8"
                >

                <Spinner
                    android:id="@+id/et_empName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/layout_bg10"
        android:id="@+id/tv_empName_no"
        android:padding="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textSize="@dimen/_10sdp" />
-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/layout_bg10"
        android:hint="@string/amount"
        android:maxLength="6"
        android:id="@+id/et_advanceAmount"
        android:inputType="number"
        android:padding="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textSize="@dimen/_10sdp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/layout_bg10"
        android:hint="@string/remark"
        android:id="@+id/et_remark"
        android:padding="@dimen/_6sdp"

        android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"
        android:gravity="center_vertical"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/_10sdp" />

    <TextView

        android:id="@+id/tv_advance_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/layout_bg13"
        android:padding="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:gravity="center"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_10sdp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorGrey25" />


</LinearLayout>
</android.support.v7.widget.CardView>